Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19979

Assertion failed in fdb_kvs_header_copy inside fdb_compact

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 5.0.0
    • forestdb
    • Untriaged
    • MacOSX 64-bit
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      An fdb_compact operation is called in KV-engine to periodically compact the forestDB files. During one of the calls, an assertion is hit. Note that compaction thread inside KV-engine creates its own file handle.

      The following 2 patches applied to ep-engine master and the rebalance_in_with_ops in simple-test should reproduce the problem.

      http://review.couchbase.org/#/c/64934/
      http://review.couchbase.org/#/c/65081/

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sriram Sriram Ganesan (Inactive)
            sriram Sriram Ganesan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty