MB-19979: Err, don't assert if file exists on compaction

In manual compaction mode if new_file is opened by application
before compaction runs, then compaction hits assert in
fdb_kvs_header_copy due to mismatching kv store info.
Compaction's new file open now uses O_EXCL flag.

Change-Id: Ie575218adc0363748cd11c57bb176c2aa6d7676f
Reviewed-on: http://review.couchbase.org/65176
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: buildbot <build@couchbase.com>